--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,28 +1,57 @@
-<h2>Sign up</h2>
+<h2>会員登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
+  <%= render "devise/shared/error_messages", model: f.object %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <label class="form-text">ニックネーム</label>
+    <%= f.text_area :nickname, class:"input-default", id:"nickname", maxlength:"40" %>
+  </div>
+
+  <div class="field">
+    <label class="form-text">メールアドレス</label>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <label class="form-text">パスワード</label>
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <label class="form-text">パスワード(確認)</label>
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
+  <div class="gender-field">
+    <label class="form-text">性別</label>
+    <label class="form-text-gender">男性</label>
+    <%= f.radio_button :gender, :man %>
+    <label class="form-text-gender">女性</label>
+    <%= f.radio_button :gender, :woman %>
+    <label class="form-text-gender">その他</label>
+    <%= f.radio_button :gender, :other %>
+  </div>
+
+  <div class="form-group">
+    <label class="form-text">生年月日</label>
+    <div class='input-birth-wrap'>
+      <%= raw sprintf(
+                  f.date_select(
+                    :birthday,
+                    class:'select-birth',
+                    id:"birth-date",
+                    use_month_numbers: true,
+                    prompt:'--',
+                    start_year: 1930,
+                    end_year: (Time.now.year - 5),
+                    date_separator: '%s'),
+                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
+    </div>
+  </div>
+
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "会員登録" %>
   </div>
 <% end %>
 
