--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,39 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<div class='main'>
+  <%# 商品一覧 %>
+  <div class='post-contents'>
+    <ul class='post-lists'>
+
+      <% @posts.each do |post| %>
+        <li class='list'>
+          <%= link_to post_path(post) do %>
+          <div class='post-img-content'>
+            <%= image_tag post.image, class: "post-img" if post.image.attached?%>
+          </div>
+          <div class='post-info'>
+            <h3 class='post-title'>
+              <%= post.title %>
+            </h3>
+            <div class='post-price'>
+              <span><%= post.price %>円</span>
+            </div>
+            <div class='post-local'>
+              <%= post.local %>
+            </div>
+            <div class='post-date'>
+              <%= post.created_at %>
+            </div>
+            <div class='post-explain'>
+              <%= post.explain %>
+            </div>
+            <div class='post-building'>
+              <%= post.building %>
+            </div>
+          </div>
+          <% end %>
+        </li>
+      <% end %>
+
+    </ul>
+  </div>
+  <%# /商品一覧 %>
+</div>
