room_user中間テーブル 作成

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -22,7 +22,7 @@
       <%# //投稿者が見てる場合のみこちらを表示 %>
       <%# 投稿者以外が見てる場合はこちらを表示。ログアウト状態でも見れる %>
     <% else %>
-      <%= link_to '質問する', post_path(@post.id) ,class:"post-red-btn"%>
+      <%= link_to '質問する', new_room_path, class:"post-red-btn"%>
     <% end %>
       <%# //投稿者以外が見てる場合はこちらを表示 ログアウト状態でも見れる%>
     <%# //ログイン状態か、投稿者と自分のユーザーIDが同じかで表示を変える%>
