--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,40 @@
-<h2>会員登録</h2>
-
 <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
+<div class='form-wrap'>
+  <div class='form-header'>
+    <h1 class='form-header-text'>
+      会員情報入力
+    </h1>
+  </div>
+
   <%= render "devise/shared/error_messages", model: f.object %>
 
-  <div class="field">
+  <div class="form-group">
     <label class="form-text">ニックネーム</label>
     <%= f.text_area :nickname, class:"input-default", id:"nickname", maxlength:"40" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <label class="form-text">メールアドレス</label>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, class:"input-default", autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <label class="form-text">パスワード</label>
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, class:"input-default", autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <label class="form-text">パスワード(確認)</label>
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, class:"input-default", autocomplete: "new-password" %>
   </div>
 
-  <div class="gender-field">
+  <div class="form-group">
     <label class="form-text">性別</label>
-    <label class="form-text-gender">男性</label>
-    <%= f.radio_button :gender, :man %>
-    <label class="form-text-gender">女性</label>
-    <%= f.radio_button :gender, :woman %>
-    <label class="form-text-gender">その他</label>
-    <%= f.radio_button :gender, :other %>
+    <div class=form-group-gender>
+      <label class="form-gender"> 男性<%= f.radio_button :gender, :man %> </label>
+      <label class="form-gender"> 女性<%= f.radio_button :gender, :woman %> </label>
+      <label class="form-gender"> その他<%= f.radio_button :gender, :other %> </label>
+    </div>
   </div>
 
   <div class="form-group">
@@ -50,9 +54,8 @@
     </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "会員登録" %>
+  <div class="register-btn">
+    <%= f.submit "会員登録", class: "register-red-btn" %>
   </div>
+</div>
 <% end %>
-
-<%= render "devise/shared/links" %>
