--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,25 +11,22 @@
 
   <body>
     <header class="header">
-      <div class="header__bar row">
-        <h1 class="grid-6"><a href="/">RoomSharer</a></h1>
-        <% if user_signed_in? %>
-          <div class="user_nav grid-6">
-            <span><%= current_user.nickname %>
-              <ul class="user__info">
-                <li>
-                  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-                </li>
-              </ul>
-            </span>
-          </div>
-        <% else %>
-          <div class="grid-6">
-            <%= link_to "ログイン", new_user_session_path, class: "post" %>
-            <%= link_to "新規登録", new_user_registration_path, class: "post" %>
-          </div>
-        <% end %>
-        <%= link_to "部屋を貸す", new_post_path, class: "post" %>
+      <div class="nav">
+        <h1><a href="/" class="app-name">RoomSharer</a></h1>
+        <ul class='header-right'>
+          <% if user_signed_in? %>
+            <li>
+              <%= link_to current_user.nickname, "#", class: "user-nickname" %>
+              <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "header-btn" %>
+            </li>
+          <% else %>
+            <li>
+              <%= link_to "ログイン", new_user_session_path, class: "header-btn" %>
+              <%= link_to "新規登録", new_user_registration_path, class: "header-btn" %>
+            </li>
+          <% end %>
+          <li> <%= link_to "部屋を貸す", new_post_path, class: "header-btn" %> </li>
+        </ul>
       </div>
     </header>
 
