--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -1,50 +1,56 @@
 .main {
-  
+  background-color: rgb(245, 245, 245);
 }
 
 .post-contents{
-
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .post-lists{
-  
+  display: block;
+
 }
 
 .list{
-  display: flex;
-  
+  margin: 40px;
 }
 
 .post{
+  width: 70vw;
+  border: solid 1px black;
   display: flex;
-  
+
 }
 
 .post-left{
-  background-color: darkblue;
-  
+  width: 25%;
 }
 
 .post-img{
-  height: 24vh;
-  width: 32vh;
+  width: 100%;
+  height: 100%;
 
 }
 
 .post-center{
-  background-color: darkgray;
+  width: 55%;
 }
 
 .post-title{
-  
+  border: solid 1px #2e2e2e42;
+  height: 25%;
 }
 
 .post-explain{
-  
+  border: solid 1px #2e2e2e42;
+  height: 75%;
 }
 
 .post-right{
-  background-color: floralwhite;
+  width: 20%;
+
 }
 
 .post-price{
