--- a/app/assets/stylesheets/posts/new.css
+++ b/app/assets/stylesheets/posts/new.css
@@ -2,7 +2,7 @@
 
 
 .posts-sell-contents {
-  background-color: #f5f5f5;
+  background-color: rgb(245, 245, 245);
   font-family: "Source Sans Pro", Helvetica, Arial, "æ¸¸ã‚´ã‚·ãƒƒã‚¯ä½“", "YuGothic", "ãƒ¡ã‚¤ãƒªã‚ª", "Meiryo", sans-serif;
   font-size: 14px;
   display: flex;
@@ -136,11 +136,11 @@
 }
 
 .sell-btn {
-  background: #ea352d;
-  border: 1px solid #ea352d;
+  background: #4fb655;
+  border: 1px solid #4fb655;
   color: #fff;
   width: 100%;
-  height: 50px;
+  line-height: 50px;
   font-size: 14px;
   margin-bottom: 4vh;
 }
@@ -152,3 +152,4 @@
   padding: 15px 35%;
   text-decoration: none;
 }
+
