--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,7 +29,7 @@
                 <%= post.building %>
               </div>
               <div class='post-date'>
-                <%= post.created_at %>
+                <%= time_ago_in_words(post.created_at) %> ago
               </div>
             </div>
           </div>
