--- a/app/assets/stylesheets/posts/show.css
+++ b/app/assets/stylesheets/posts/show.css
@@ -38,7 +38,7 @@
 .post-price-box {
   margin: 25px 0px;
   display: flex;
-  align-items: center;
+  justify-content: space-between;
 }
 
 .post-price {
