--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,12 +12,14 @@
       <div class="post-price">
         ¥ <%= @post.price%>
       </div>
+      <%# <投稿主のみの編集ボタンと削除ボタン> %>
       <div>
         <% if user_signed_in? && current_user.id == @post.user_id%>
-        <%= link_to '投稿の編集', edit_post_path, method: :get, class: "post-red-btn" %>
+        <%= link_to '投稿の編集', edit_post_path, method: :get, class: "post-edit" %>
         <%= link_to '削除', post_path, method: :delete, class:'post-destroy' %>
         <% end %>
       </div>
+      <%# /<投稿主のみの編集ボタンと削除ボタン> %>
     </div>
     
 
@@ -49,7 +51,7 @@
         </tr>
       </tbody>
     </table>
-
+    <%# <コメント欄> %>
     <div class="comment-box">
     <% if user_signed_in? %>
       <%= form_with(model: [@post, @comment], local: true) do |form| %>
@@ -75,6 +77,7 @@
       <% end %>
     <% end %>
     </div>
+    <%# </コメント欄> %>
   </div>
   <%# /商品の概要 %>
 </div>
