--- a/app/assets/stylesheets/posts/show.css
+++ b/app/assets/stylesheets/posts/show.css
@@ -38,12 +38,21 @@
 .post-price-box {
   margin: 25px 0px;
   display: flex;
-  justify-content: space-between;
 }
 
 .post-price {
   font-size: 3vh;
   font-weight: bold;
+  
+}
+
+.post-edit {
+  text-align: center;
+  background-color: #2f3697;
+  font-size: 18px;
+  font-weight: bold;
+  color: #FFF;
+  padding: 1vh 1vw;
 }
 
 .post-red-btn {
