--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
 
   <div class="form-group">
     <label class="form-text">性別</label>
-    <div class=form-group-gender>
+    <div class='form-group-gender'>
       <label class="form-gender"> 男性<%= f.radio_button :gender, :man %> </label>
       <label class="form-gender"> 女性<%= f.radio_button :gender, :woman %> </label>
       <label class="form-gender"> その他<%= f.radio_button :gender, :other %> </label>
