--- a/app/assets/stylesheets/posts/index.css
+++ b/app/assets/stylesheets/posts/index.css
@@ -21,7 +21,8 @@
   width: 70vw;
   border: solid 1px black;
   display: flex;
-
+  background-color: white;
+  height: 200px;
 }
 
 .post-left{
@@ -31,7 +32,7 @@
 .post-img{
   width: 100%;
   height: 100%;
-
+  border: solid 1px #2e2e2e42;
 }
 
 .post-center{
@@ -41,16 +42,24 @@
 .post-title{
   border: solid 1px #2e2e2e42;
   height: 25%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .post-explain{
   border: solid 1px #2e2e2e42;
   height: 75%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .post-right{
   width: 20%;
-
+  border-left: solid 1px #2e2e2e42;
+  display: block;
+  align-items: flex-start;
 }
 
 .post-price{
