--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,7 +19,7 @@
               </div>
             </div>
             <div class='post-right'>
-              <div class='post-price'>
+              <div class='top-post-price'>
                 <%= post.price %>円
               </div>
               <div class='post-local'>
@@ -29,7 +29,7 @@
                 <%= post.building %>
               </div>
               <div class='post-date'>
-                <%= time_ago_in_words(post.created_at) %> ago
+                <%= time_ago_in_words(post.created_at) %>前
               </div>
             </div>
           </div>
