--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,10 +11,10 @@
               <%= image_tag post.image, class: "post-img" if post.image.attached?%>
             </div>
             <div class='post-center'>
-              <h3 class='post-title'>
+              <h3 class='top-post-title'>
                 <%= post.title %>
               </h3>
-              <div class='post-explain'>
+              <div class='top-post-explain'>
                 <%= post.explain %>
               </div>
             </div>
