--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -55,7 +55,7 @@
         <div class="weight-bold-text">
           価格 ¥
         </div>
-        <%= f.text_field :price, class:"posts-text", id:"post-price", placeholder:"例）10000（0~999999まで）" %>
+        <%= f.text_field :price, class:"posts-text", id:"post-price", placeholder:"0~999999まで（半角数字）" %>
       </div>
     </div>
     <%# /投稿の詳細 %>
