--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -55,7 +55,7 @@
   </div>
 
   <div class="register-btn">
-    <%= f.submit "会員登録", class: "register-red-btn" %>
+    <%= f.submit "会員登録", class: "register-btn-in" %>
   </div>
 </div>
 <% end %>
