--- a/app/assets/stylesheets/posts/new.css
+++ b/app/assets/stylesheets/posts/new.css
@@ -29,17 +29,6 @@
   text-align: center;
 }
 
-/* 共通 */
-.indispensable {
-  background: #ea352d;
-  margin-left: 8px;
-  padding: 3px;
-  border-radius: 2px;
-  color: #fff;
-  font-size: 12px;
-  font-weight: bold;
-}
-
 .weight-bold-text {
   font-weight: bold;
   min-width: 170px;
@@ -52,25 +41,6 @@
   background-color: #f5f5f5;
   padding-left: 20px;
 }
-
-.question {
-  width: 20px;
-  height: 20px;
-  border-radius: 10px;
-  background: #0099e8;
-  color: #FFF;
-  font-size: 13px;
-  text-align: center;
-  line-height: 20px;
-  text-decoration: none;
-  margin-left: 5px;
-}
-
-.question-text {
-  display: flex;
-}
-
-/* /共通 */
 
 /* 出品画像 */
 .img-upload {
@@ -136,8 +106,8 @@
 }
 
 .sell-btn {
-  background: #4fb655;
-  border: 1px solid #4fb655;
+  background-color: rgb(51, 51, 51);
+  border: 1px solid black;
   color: #fff;
   width: 100%;
   line-height: 50px;
