--- a/app/assets/stylesheets/user/registrations.css
+++ b/app/assets/stylesheets/user/registrations.css
@@ -98,9 +98,9 @@
   margin: 0 auto;
 }
 
-.register-red-btn {
-  background: #4fb655;
-  border: 1px solid #4fb655;
+.register-btn-in {
+  background-color: rgb(51, 51, 51);
+  border: 1px solid black;
   color: #fff;
   width: 100%;
   line-height: 50px;
