--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -63,7 +63,7 @@
     <%# 下部ボタン %>
     <div class="sell-btn-contents">
       <%= f.submit "編集する", class:"sell-btn"%>
-      <%=link_to 'もどる', post_path, class:"back-btn" %>
+      <%=link_to 'もどる', :back, class:"back-btn" %>
     </div>
     <%# /下部ボタン %>
   </div>
