--- a/app/assets/stylesheets/posts/new.css
+++ b/app/assets/stylesheets/posts/new.css
@@ -53,6 +53,7 @@
 .click-upload {
   margin: 15px 0;
   min-width: 250px;
+  font-size: 16px;
 }
 
 .click-upload>p {
@@ -113,6 +114,7 @@
   line-height: 50px;
   font-size: 14px;
   margin-bottom: 4vh;
+  cursor: pointer;
 }
 
 .back-btn {
@@ -122,4 +124,3 @@
   padding: 15px 35%;
   text-decoration: none;
 }
-
