--- a/app/assets/stylesheets/user/registrations.css
+++ b/app/assets/stylesheets/user/registrations.css
@@ -62,13 +62,12 @@
   display: flex;
   margin: 0 auto;
   padding-top: 20px;
-  justify-content: space-around;
+  justify-content: space-between;
 
 }
 
 .form-gender{
-  font-size: 17px;
-
+  font-size: 19px;
 }
 
 .input-birth-wrap {
@@ -99,12 +98,23 @@
 }
 
 .register-btn-in {
-  background-color: rgb(51, 51, 51);
-  border: 1px solid black;
-  color: #fff;
+  background-color: #eee;
   width: 100%;
-  line-height: 50px;
-  font-size: 14px;
+  line-height: 40px;
+  font-size: 18px;
   margin-bottom: 4vh;
   cursor: pointer;
+  display: inline-block;
+  padding: 0.3em 1em;
+  text-decoration: none;
+  color:  #333333;
+  border: solid 1px  #333333;
+  border-radius: 3px;
+  transition: .4s;
+  margin-top: 10px;
+}
+
+.register-btn-in:hover {
+  background:  #a3a3a3;
+  color: white;
 }
