--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -29,7 +29,7 @@
 }
 
 .header-btn {
-  /* line-height: 32px; */
+  margin-top: 5px;
   margin-right: 20px;
   width: 130px;
   display: inline-block;
