--- a/app/assets/stylesheets/posts/show.css
+++ b/app/assets/stylesheets/posts/show.css
@@ -58,33 +58,43 @@
 }
 
 .post-price {
-  font-size: 3vh;
+  font-size: 30px;
   font-weight: bold; 
   margin: 16px 0;
 }
 
 .owner-btn {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-end;
+  width: 60vw;
+  line-height: 2vh;
 }
 
 .post-edit {
-  text-align: center;
-  background-color: rgb(51, 51, 51);
-  font-size: 15px;
-  font-weight: bold;
-  color: #FFF;
-  padding: 1vh 6vw;
+  padding: 1vh 4vw;
   margin-right: 5px;
+  background: rgb(245, 245, 245);
+  color: black;
+  border: 1px solid #dedede;
+  border-bottom: 0px;
+}
+
+.post-edit:hover {
+  background: #aaa;
+  color: #fff;
 }
 
 .post-destroy {
-  background-color: lightgray;
-  text-align: center;
-  font-size: 15px;
+  padding: 1vh 2vw;
+  background:  rgb(245, 245, 245);
   color: black;
-  padding: 1vh 4vw;
+  border: 1px solid #dedede;
+  border-bottom: 0px;
+}
+
+.post-destroy:hover {
+  background: #aaa;
+  color: #fff;
 }
 
 .post-explain-box {
@@ -93,11 +103,6 @@
   width: 60vw;
   display: flex;
   justify-content: center;
-}
-
-.post-other-box {
-  font-size: 20px;
-  margin: 40px 0px;
 }
 
 .detail-table {
