--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div class='main'>
+  <div class="mypage"><h2>// マイページ //</h2></div>
   <%# 商品一覧 %>
   <div class='post-contents'>
     <ul class='post-lists'>
