--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -7,6 +7,10 @@
     <%= f.label :prefecture_name_eq, '都道府県：' %>
     <%= f.collection_select :prefecture_name_eq, @prefecture_name, :name, :name, include_blank: '指定なし' %>
     <br>
+    <%= f.label :price_eq, '価格：' %>
+    <%= f.search_field :price_gteq, placeholder: "¥ Min" %> 〜
+    <%= f.search_field :price_lteq, placeholder: "¥ Max" %>
+    <br>
     <%= f.submit '検索' %>
   <% end %>
 </div>
