--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,8 +8,8 @@
     <%= f.collection_select :prefecture_name_eq, @prefecture_name, :name, :name, include_blank: '指定なし' %>
     <br>
     <%= f.label :price_eq, '価格：' %>
-    <%= f.search_field :price_gteq, placeholder: "例（5000）" %>円以上〜
-    <%= f.search_field :price_lteq, placeholder: "例（10000）" %>円以下
+    <%= f.search_field :price_gteq, placeholder: "例）5000" %>円以上〜
+    <%= f.search_field :price_lteq, placeholder: "例）10000" %>円以下
     <br>
     <%= f.submit '検索' %>
   <% end %>
