--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,23 +1,22 @@
 <div class='main'>
   <div>
-  <%= search_form_for @p, url: posts_search_path do |f| %>
-    <%= f.label :title_cont, 'タイトル：' %>
-    <%= f.search_field :title_cont, placeholder:'キーワード' %>
-    <br>
-    <%= f.label :prefecture_name_eq, '都道府県：' %>
-    <%= f.collection_select :prefecture_name_eq, @prefecture_name, :name, :name, include_blank: '指定なし' %>
-    <br>
-    <%= f.label :price_eq, '価格：' %>
-    <%= f.search_field :price_gteq, placeholder: "例）5000" %>円以上〜
-    <%= f.search_field :price_lteq, placeholder: "例）10000" %>円以下
-    <br>
-    <%= f.submit '検索' %>
-  <% end %>
-</div>
+    <%= search_form_for @p, url: posts_search_path do |f| %>
+      <%= f.label :title_or_explain_or_local_or_building_or_other_cont, 'キーワード：' %>
+      <%= f.search_field :title_or_explain_or_local_or_building_or_other_cont, placeholder:'例）駅から5分' %>
+      <br>
+      <%= f.label :prefecture_name_eq, '都道府県：' %>
+      <%= f.collection_select :prefecture_name_eq, @prefecture_name, :name, :name, include_blank: '指定なし' %>
+      <br>
+      <%= f.label :price_eq, '価格：' %>
+      <%= f.search_field :price_gteq, placeholder: "例）5000" %>円以上〜
+      <%= f.search_field :price_lteq, placeholder: "例）10000" %>円以下
+      <br>
+      <%= f.submit '検索' %>
+    <% end %>
+  </div>
   <%# 商品一覧 %>
   <div class='post-contents'>
     <ul class='post-lists'>
-
       <% @results.each do |result| %>
         <li class='list'>
           <%= link_to post_path(result) do %>
